# null-hackathon

./: .env.example  .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  emotion_webcam.py  index.html  package.json  pnpm-lock.yaml
experience/: README.md  UPSTREAM.md  index.html  package.json  vite.config.ts
experience/src/: App.tsx  Explain.tsx  explain.css  index.css  main.tsx
experience/src/crowd/: CrowdPane.tsx  archetypes.ts  crowd.ts  gait.ts  particles.ts
experience/src/sources/: api.ts  demo.ts  face.ts  pointer.ts  prosody.ts
experience/src/state/: emotion.ts
gemma-emotion-vectors/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
gemma-emotion-vectors/docs/: HOW_IT_WORKS.md
gemma-emotion-vectors/scripts/: emotion_api.py  emotion_trace.py  emotion_web.py
gemma-emotion-vectors/tests/: test_emotion_api.py  test_voice_selection.py
gemma-emotion-vectors/web/: app.js  index.html  style.css
src/: App.tsx  index.css
src/auth/: AuthProvider.tsx  AuthScreen.tsx  supabase.ts
src/crowd/: CrowdPane.tsx  archetypes.ts  crowd.ts  gait.ts  particles.ts
src/state/: emotion.ts
