[project]
name = "gemma-emotion-vectors"
version = "0.1.0"
description = "Token-level Gemma tracing with published emotion vectors"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "huggingface-hub>=0.36",
    "numpy>=1.24",
    "torch>=2.7",
    "transformers>=5.5,<6",
]

[tool.uv]
package = false
